module-system/sov-modules-macros/tests/module_info/field_missing_attribute.stderr
error: This field is missing an attribute: add `#[module]`, `#[state]` or `#[address]`.
 --> tests/module_info/field_missing_attribute.rs:8:5
  |
8 |     test_state1: StateMap<u32, u32>,
  |     ^^^^^^^^^^^
